# bohr-runtime

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: master.yaml  pull_request.yaml  test.yaml
bohr/: VERSION  __init__.py  api.py  cli.py  config.py  core.py  datamodel.py  debugging.py  decorators.py  dvcwrapper.py  formatting.py  fs.py  lock.py  nlp_utils.py  pathconfig.py  snorkel_util.py  workspace.py
bohr/artifacts/: commit.py  core.py
bohr/cli/: cli.py
bohr/cli/dataset/: commands.py
bohr/cli/porcelain/: commands.py
bohr/cli/task/: commands.py
bohr/collection/artifacts/: __init__.py  commit.py  commit_file.py  commit_message.py  issue.py  method.py
bohr/collection/dataloaders/: from_csv.py
bohr/collection/datamappers/: __init__.py  commit.py  commitfile.py  issue.py  manuallabels.py  method.py
bohr/collection/heuristictypes/: keywords.py  tool.py
bohr/collection/heuristictypes/tools/: refactoring_miner.py
bohr/config/: appconfig.py  pathconfig.py
bohr/datamodel/: artifact.py  artifactmapper.py  bohrrepo.py  dataset.py  datasetlinker.py  datasetloader.py  heuristic.py  task.py
bohr/dvc/: commands.py  stages.py
bohr/labeling/: cache.py  hierarchies.py  labelset.py
bohr/labels/: cache.py  labelset.py
bohr/linkers/: l.py
bohr/pipeline/: __init__.py  apply_heuristics.py  combine_heuristics.py  core.py  data_analysis.py  dvc.py  label_dataset.py  parse_labels.py  train_label_model.py
bohr/pipeline/stages/: __init__.py  apply_heuristics.py  combine_heuristics.py  label_dataset.py  parse_labels.py  train_label_model.py
bohr/resources/: labels.template
bohr/resources/dvc_command_templates/: apply_heuristics.template  combine_heuristics.template  label_dataset.template  parse_labels.template  preprocess_7z.template  preprocess_copy.template  preprocess_shell.template  train_label_model.template
bohr/templates/dataloaders/: from_csv.py
bohr/templates/datamappers/: commit.py  commitfile.py  issue.py  manuallabels.py  method.py
bohr/templates/heuristics/: keywords.py  tool.py
bohr/templates/heuristics/tools/: refactoring_miner.py
bohr/util/: logging.py  misc.py  nlp.py  paths.py
bohrruntime/: __init__.py  api.py  appconfig.py  bohrconfig.py  bohrconfigparser.py  bohrfs.py  commands.py  core.py  data_analysis.py  dataset.py  datasource.py  debugging.py  dvc.py  dvcwrapper.py  fs.py  heuristics.py  heuristicuri.py  pipeline.py  stages.py  storageengine.py  task.py  testtools.py  workspace.py
bohrruntime/cli/: bohr.py  bohr_internal.py  cli.py
bohrruntime/cli/porcelain/: commands.py
bohrruntime/cli/remote/: commands.py
bohrruntime/config/: appconfig.py  pathconfig.py
bohrruntime/datamodel/: bohrconfig.py  dataset.py  experiment.py  model.py  task.py  workspace.py
bohrruntime/dvc/: commands.py  stages.py
bohrruntime/labeling/: cache.py
bohrruntime/matching/: dataset.py
bohrruntime/pipeline/: apply_heuristics.py  combine_heuristics.py  data_analysis.py  label_dataset.py  single_heuristic_metrics.py  train_label_model.py
bohrruntime/stages/: apply_heuristics.py  combine_heuristics.py  experiment_metrics.py  label_dataset.py  single_heuristic_metrics.py  train_label_model.py
bohrruntime/tasktypes/grouping/: core.py  dataset.py
bohrruntime/tasktypes/labeling/: __init__.py  core.py  lfs.py  model.py
bohrruntime/util/: debugging.py  logging.py  nlp.py  paths.py
test/: testutils.py
test-b2b/grouping/: .gitignore  bohr.py  dvc.yaml  weighted_similarities.csv
test-b2b/grouping/cached-datasets/: .gitignore  apache_test.jsonl.metadata.json
test-b2b/labeling/: .gitignore  bohr.py  dvc.yaml
test-b2b/labeling/.bohr/: transient_stages.json
test-b2b/labeling/.dvc/: config
test-b2b/labeling/cached-datasets/: manual_labels.berger.jsonl.metadata.json  manual_labels.herzig.jsonl.metadata.json
test-b2b/scenario1/: .gitignore  bohr.json  bohr.py  dvc.yaml  labels.py
test-b2b/scenario1/.bohr/: config.yaml  transient_stages.json
test-b2b/scenario1/.dvc/: config
test-b2b/scenario1/cached-datasets/: .gitignore  manual_labels.berger.jsonl.metadata.json
test-b2b/scenario1/data/: .gitignore
test-b2b/scenario1/dataloaders/: berger.py  bugginess-train-1k.py  herzig.py  smells-test_10.py  smells-train_10.py
test-b2b/scenario1/downloaded-data/: .gitignore  1151-commits.csv.dvc  200k-commits-link-issues.csv.dvc  200k-commits-manual-labels.csv.dvc  200k-commits.csv.dvc  berger.csv.dvc
test-b2b/scenario1/heuristics/: bugginess.py  smells.py
test-b2b/scenario1/heuristics/bugginess/: file_heuristics.py  issue_heuristics.py  main_heurstics.py  manuallabels.py  tool_heuristics.py
test-b2b/scenario1/labeled-data/: .gitignore
test-b2b/scenario1/labeled-datasets/: .gitignore
test-b2b/scenario1/labeled-datasets/bugginess-1k/: .gitignore
test-b2b/scenario1/labeled-datasets/smells_10/: .gitignore
test-b2b/scenario1/labels/: CommitLabel.txt  SStuB.txt
test-b2b/scenario1/manual_stages/: preprocess_bugginess_test.template
test-b2b/scenario1/metrics/bugginess-1k/: analysis_1151-commits.json  analysis_200k-commits-1k.json  analysis_berger.json  analysis_bugginess_train_1k.json  heuristic_metrics.json  heuristic_metrics_1151-commits.json  heuristic_metrics_200k-commits-1k.json  heuristic_metrics_berger.json  heuristic_metrics_dataloaders.1151-commits.json  label_model_metrics.json
test-b2b/scenario1/metrics/smells_10/: analysis_smells-train_10.json  heuristic_metrics.json  heuristic_metrics_smells-test_10.json  heuristic_metrics_smells-train_10.json  label_model_metrics.json
test-b2b/scenario1/tasks/: bugginess-1k.py
test-b2b/scenario1/tools/: install-refactoring-miner
test-b2b/scenario2/dataset_samples/input/: sample.clustered.jsonl  sample.expanded.jsonl  sample.matching.jsonl
test-b2b/scenario2/dataset_samples/output/: sample.clustered.jsonl  sample.expanded.jsonl  sample.matching.jsonl
test/dvc/: test_commands.py  test_stages.py
(+128 files in other folders)
