[tool.poetry]
name = "bohr-framework"
version = "0.4.9-rc"
description = "BOHR framework"
authors = ["hlib <hlibbabii@gmail.com>"]
license = "MIT"
packages = [
    { include = "bohr" },
]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "1.6.0"
absl-py = "0.12.0"
appdirs = "1.4.4"
atpublic = "2.3"
bcrypt = "3.2.0"
beeprint = "2.4.10"
cached-property = "1.5.2"
cachetools = "4.2.2"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
click = "7.1.2"
cloudpickle = "1.6.0"
colorama = "0.4.4"
commonmark = "0.9.1"
configobj = "5.0.6"
cryptography = "3.4.7"
Cython = "0.29.23"
dask = "2021.4.1"
decorator = "5.0.7"
deepdiff = "5.5.0"
dictdiffer = "0.8.1"
diskcache = "5.2.1"
distributed = "2020.12.0"
distro = "1.5.0"
dpath = "2.0.1"
dulwich = "0.20.21"
dvc = "2.0.14"
flatten-dict = "0.3.0"
"flufl.lock" = "3.2"
fsspec = "0.9.0"
ftfy = "5.9"
funcy = "1.16"
future = "0.18.2"
gitdb = "4.0.7"
GitPython = "3.1.20"
google-api-core = "1.26.3"
google-api-python-client = "2.3.0"
google-auth = "1.30.0"
google-auth-httplib2 = "0.1.0"
googleapis-common-protos = "1.53.0"
grandalf = "0.6"
grpcio = "1.37.1"
HeapDict = "1.0.1"
httplib2 = "0.19.1"
idna = "2.10"
invoke = "1.5.0"
Jinja2 = "2.11.3"
joblib = "1.0.1"
jsonpath-ng = "1.5.2"
jsons = "1.4.0"
mailchecker = "4.0.6"
Markdown = "3.3.4"
MarkupSafe = "1.1.1"
msgpack = "1.0.2"
munkres = "1.1.4"
nanotime = "0.5.2"
networkx = "2.3"
nltk = "3.5"
numpy = "1.20.1"
numpyencoder = "0.3.0"
oauth2client = "4.1.3"
ordered-set = "4.0.2"
packaging = "20.9"
pandas = "1.2.4"
paramiko = "2.7.2"
pathlib2 = "2.3.5"
pathspec = "0.8.1"
phonenumbers = "8.12.21"
ply = "3.11"
protobuf = "3.14.0"
psutil = "5.8.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pydot = "1.4.2"
PyDrive2 = "1.8.2"
pygit2 = "1.5.0"
Pygments = "2.9.0"
pygtrie = "2.4.2"
PyNaCl = "1.4.0"
pyOpenSSL = "20.0.1"
pyparsing = "2.4.7"
python-benedict = "0.23.2"
python-dateutil = "2.8.1"
python-fsutil = "0.4.0"
python-slugify = "4.0.1"
pytz = "2021.1"
PyYAML = "5.4.1"
regex = "2020.11.13"
requests = "2.25.1"
rich = "9.13.0"
rsa = "4.7.2"
"ruamel.yaml" = "0.17.4"
"ruamel.yaml.clib" = "0.2.2"
scikit-learn = "0.21.3"
shortuuid = "1.0.1"
shtab = "1.3.5"
six = "1.15.0"
smmap = "4.0.0"
snorkel = "0.9.6"
commit-explorer-client = "^0.1.0"


[tool.poetry.dev-dependencies]
appdirs = "1.4.4"
astroid = "2.4.2"
attrs = "21.2.0"
black = "20.8b1"
cfgv = "3.2.0"
distlib = "0.3.1"
filelock = "3.0.12"
identify = "1.5.11"
iniconfig = "1.1.1"
isort = "5.7.0"
lazy-object-proxy = "1.4.3"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
nodeenv = "1.5.0"
packaging = "20.9"
pathspec = "0.8.1"
pluggy = "0.13.1"
pre-commit = "2.9.3"
py = "1.10.0"
pylint = "2.6.0"
pyparsing = "2.4.7"
pytest = "6.2.1"
toml = "0.10.2"
typed-ast = "1.4.2"
virtualenv = "20.2.2"
wrapt = "1.12.1"

[tool.poetry.scripts]
bohr = "bohr.cli.cli:bohr"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython=0.29.23"]
build-backend = "poetry.core.masonry.api"
