[tool.poetry]
name = "bohr-runtime"
version = "0.5.0-rc.2"
description = "BOHR runtime"
authors = ["hlib <hlibbabii@gmail.com>"]
license = "MIT"
packages = [
    { include = "bohrruntime" },
]

[tool.poetry.dependencies]
python = "^3.8"
bohr-api = { git = "https://github.com/giganticode/bohr-api", branch = "v0.2.0" }
bohr-labels = { git = "https://github.com/giganticode/bohr-labels", branch = "v0.1.0" }
snorkel = "^0.9"
jsonlines = "^3.0"
GitPython = "^3.1"
numpy = "^1.19"
pandas = "^1.3"
dvc = "^2.0"
cachetools = "^4.2"
numpyencoder = "^0.3"
nltk = "^3.5"
tabulate = "^0.8"
pymongo = "^4.0"
appdirs = "^1.4"
scikit-learn = "^0.22"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pre-commit = "^2.16"
pytest = "6.2"

[tool.poetry.scripts]
bohr = "bohrruntime.cli.cli:bohr"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
